# agent-service-desk

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  README.md  justfile  learning.md  performance-fix-plan.md  performance-fixes.md  ui-fix-plan.md  ui-fixes-todo.txt  ui-fixes.md  ui-overhaul-plan.md
api/: CLAUDE.md  pyproject.toml  railway.json  requirements.txt  test_draft_pipeline.py  test_retrieval.py
api/app/: auth.py  config.py  db.py  deps.py  main.py
api/app/pipelines/: __init__.py  drafting.py  evaluation.py  ingestion.py  retrieval.py  triage.py
api/app/providers/: __init__.py  openai.py
api/app/queries/: dashboard.py  drafts.py  evals.py  knowledge.py  tickets.py  users.py
api/app/routers/: auth.py  dashboard.py  debug.py  drafts.py  evals.py  health.py  knowledge.py  prompts.py  tickets.py  users.py
api/app/schemas/: common.py  dashboard.py  drafts.py  evals.py  knowledge.py  tickets.py  users.py
api/tests/: test_drafting_pipeline.py  test_openai_provider.py  test_triage_pipeline.py
design-system/agent-service-desk/: MASTER.md
docs/: architecture.md  auth-rls.md  concepts-log.md  deployment.md  evals.md  implementation-log.md  implementation-plan-part2.md  implementation-plan.md  project-spec-mvp.md  project-spec.md  retrieval.md
seed/: demo_accounts.py  demo_auth.ts  migrate_auth.ts  migrate_dashboard.py  migrate_rls.py  mint_tokens.py  push_schema.py  reembed.py  reset_db.py  schema.sql  seed.py  verify.py  verify.sql
web/: CLAUDE.md  next.config.ts  package-lock.json  package.json
web/public/: manifest.json  offline.html  (+1 more)
(+111 files in other folders)
