[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-service-desk-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.32",
    "psycopg[binary]>=3.3",
    "psycopg-pool>=3.2",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
    "openai>=2.26",
    "numpy>=2",
    "redis>=5",
    "arq>=0.26",
    "python-multipart>=0.0.12",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that call external services",
]
